kubernetes/network-policy/simple-web-app/maniefsts/application/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    env: application

---

apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    env: backend
