kubernetes/network-policy/simple-web-app/maniefsts/application/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    tier: backend
    app: microservices-ci
  type: NodePort
  ports:
  - name: be
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
  labels:
    tier: backend
    app: microservices-ci
spec:
  selector:
    matchLabels:
      tier: backend
      app: microservices-ci
  template:
    metadata:
      labels:
        tier: backend
        app: microservices-ci
    spec:
      containers:
      - name: backend
        image: europe-west4-docker.pkg.dev/fausto-labs/labs/ms-backend:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "100M"
          limits:
            cpu: "200m"
            memory: "200M"
        livenessProbe:
          httpGet:
            path: /hc
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /hc
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 10 
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort:  8080
          name: be
      terminationGracePeriodSeconds: 0
