kubernetes/network-policy/simple-web-app/maniefsts/application/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: application
spec:
  selector:
    tier: frontend
    app: microservices-ci
  type: ClusterIP
  ports:
  - name: fe
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: application
  labels:
    tier: frontend
    app: microservices-ci
spec:
  selector:
    matchLabels:
      tier: frontend
      app: microservices-ci
  template:
    metadata:
      labels:
        tier: frontend
        app: microservices-ci
    spec:
      containers:
      - name: frontend
        image: europe-west4-docker.pkg.dev/fausto-labs/labs/ms-frontend:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "100M"
          limits:
            cpu: "200m"
            memory: "200M"
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 20
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 10 
        ports:
        - containerPort:  80
          name: fe
