kubernetes/network-policy/simple-web-app/maniefsts/application/metadata.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata
  namespace: application
spec:
  selector:
    tier: metadata
    app: microservices-ci
  type: ClusterIP
  ports:
  - name: be
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata
  namespace: application
  labels:
    tier: metadata
    app: microservices-ci
spec:
  selector:
    matchLabels:
      tier: metadata
      app: microservices-ci
  template:
    metadata:
      labels:
        tier: metadata
        app: microservices-ci
    spec:
      containers:
      - name: metadata
        image: europe-west4-docker.pkg.dev/fausto-labs/labs/ms-metadata:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "100M"
          limits:
            cpu: "200m"
            memory: "200M"
        livenessProbe:
          httpGet:
            path: /hc
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /hc
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 10 
        ports:
        - containerPort:  8080
          name: be
      terminationGracePeriodSeconds: 0
