kubernetes/network-policy/simple-web-app/maniefsts/application/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
  namespace: application
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: proxy
              servicePort: 80
